<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="message">Select Text Message</string>

    <string name="app_name">DriveHype</string>
    <string name="app_id">334273433411246</string>
    <string name="edit_message">Enter a message</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_section2">Play</string>
    <string name="title_myMedia">My Media</string>
    <string name="title_section4">Neighbors</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_activity2">TestActivity2</string>
    <string name="login_button">TestActivity2</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="pull_info">Select the type of album to pull</string>
    <string name="pull_fb">Download a Facebook album</string>
    <string name="pull_storage">Select an album from  </string>
    <string name="logout">Log Out </string>
    <string name="permissions">Permissions </string>
    <string name="account">Account </string>
    <string name="share">Share App </string>
    <string name="rate">Rate App </string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="title_activity_app_permissions">AppPermissions</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_rate">Rate</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_photowebview">Photo Web View</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="on">On</string>
    <string name="make_discoverable">Make Discoverable</string>
    <string name="string">String</string>
    <string name="bluetooth_off">Bluetooth Off</string>
    <string name="device_scan">Device Scan</string>
    <string name="bluetooth_on">Bluetooth On</string>

</resources>