<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item android:id="@+id/permissions"
        android:title="@string/permissions"
        app:showAsAction="never" />

    <item android:id="@+id/account"
        android:title="@string/account"
        app:showAsAction="never" />

    <item android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never" />

    <item android:id="@+id/rate"
        android:title="@string/rate"
        app:showAsAction="never" />



</menu>
